--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <title>Trombinoscope Simplon 2024</title>
-</head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+    <link rel="stylesheet" href="leaflet.css">
 <body>
+    <div id="map"></div> 
 
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script> 
+<script src="leaflet.js"></script>
 </body>
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-
 </html>
