--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
     <link rel="stylesheet" href="leaflet.css">
 <body>
-    <div id="map"></div> 
+    <div id="map">
+        <p>hello world</p>
+    </div> 
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script> 
 <script src="leaflet.js"></script>
