--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Trombinoscope Simplon 2024</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
     <link rel="stylesheet" href="leaflet.css">
 <body>
+    <div class="containerMap">
+        <h1>
+            trombinoscope  simplon 
+        </h1>
     <div id="map">
-        <p>hello world</p>
     </div> 
-
+</div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script> 
 <script src="leaflet.js"></script>
 </body>
